Language Descriptor Manager. #60